recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
	levels=levels-1;
	if(levels>0){
		/*for(i<-1 to sides){
		avance(length);
		droite(360/sides);
		//polygonFractal(levels,sides,length,shrink);
		}*/
		//avance(length);
		polygonFractal(levels-1,sides,length,shrink);
	}else{
		for(i<-1 to sides){
		avance(length);
		droite(360/sides);
		}
	}
}
